<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/listItemSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/listItemMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/listItemVotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/listLikeButton"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLikeButtonClick"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/like_button"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp" />
        <Button
            android:id="@+id/listDislikeButton"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDislikeButtonClick"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Downvote"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>