<resources>
    <string name="app_name">The Buzz</string>
    <string name="action_settings">Create a Buzz</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="like_button">Upvote</string>
    <string name="refresh_button" />
    <string name="server_client_id">1080316803619-flf753te3n99rv3mh90movqrs3eujk3v.apps.googleusercontent.com</string>
</resources>

